--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 craft-cli==1.2.0
-craft-parts==1.17.1
+git+https://github.com/canonical/craft-parts.git@centos-pack-poc
 craft-providers==1.6.2
 craft-store==2.3.0
 cryptography==3.4
